Refactor using prettier

--- a/index.html
+++ b/index.html
@@ -1,38 +1,51 @@
+<!-- cSpell:disable -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="keywords" content="lab-1, KPI, front-end, FICE" />
-  <title>Галай А. В. ІМ-21</title>
-</head>
-<body>
-  <h2>Галай Андрій Вікторович</h2>
-  <p>Дата та місце народження:  8 серпня 2005 року, м. Київ</p>
-  <p>Освіта: Ліцей "Успіх", м. Київ;
-    Київський політехнічний інститут ім. Ігоря Сікорського</p>
-  
-  <p>Хоббі:</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="lab-1, KPI, front-end, FICE" />
+    <title>Галай А. В. ІМ-21</title>
+  </head>
+  <body>
+    <h2>Галай Андрій Вікторович</h2>
+    <p>Дата та місце народження: 8 серпня 2005 року, м. Київ</p>
+    <p>
+      Освіта: Ліцей "Успіх", м. Київ; Київський політехнічний інститут ім. Ігоря
+      Сікорського
+    </p>
+
+    <p>Хоббі:</p>
     <ul>
-    <li>Баскетбол</li>
-    <li>Програмування</li>
-    <li>Шахи</li>
-  </ul>
+      <li>Баскетбол</li>
+      <li>Програмування</li>
+      <li>Шахи</li>
+    </ul>
 
-  <p>Улюблені книги:</p>
-  <ol>
-    <li>Пісня Льойду й Полумʼя</li>
-    <li>Граф Монте-Крісто</li>
-    <li>Вбивство у східному експресі</li>
-  </ol>
+    <p>Улюблені книги:</p>
+    <ol>
+      <li>Пісня Льойду й Полумʼя</li>
+      <li>Граф Монте-Крісто</li>
+      <li>Вбивство у східному експресі</li>
+    </ol>
 
-  <p>Львів - місто, яке зачаровує з першого погляду. 
-    Кожна вуличка Львова наповнена стародавнім шармом, ароматами кави, духом романтики і архітектурною довершеністю. 
-    Кожен його елемент приховує цікаві історії та інтригуючі загадкові легенди. 
-    Львів - це культурна столиці України, Львів неповторний та незмінний, Львів - історія, що втілена у силуетах його архітектурних композицій. 
-    Це місто, яке "охороняють" кам'яні благородні леви та яке змусить Вас повірити в мрію. 
-    Загадковості Львова не має меж.</p>
-  <p><a href="https://city-adm.lviv.ua/"><image src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcQlCg2lJCuf9QiIzDT8ESUASFcWWuu1uT5Xboq1DhUUGzOklMSF9s0esO7HSvyDSFlYkbnh_hrAMczJnSuarWjjE6I9dxdVlWOgHmbQSw"
-  width="1000px" height="600px" alt="Львів" /></a></p>
-</body>
+    <p>
+      Львів - місто, яке зачаровує з першого погляду. Кожна вуличка Львова
+      наповнена стародавнім шармом, ароматами кави, духом романтики і
+      архітектурною довершеністю. Кожен його елемент приховує цікаві історії та
+      інтригуючі загадкові легенди. Львів - це культурна столиці України, Львів
+      неповторний та незмінний, Львів - історія, що втілена у силуетах його
+      архітектурних композицій. Це місто, яке "охороняють" кам'яні благородні
+      леви та яке змусить Вас повірити в мрію. Загадковості Львова не має меж.
+    </p>
+    <p>
+      <a href="https://city-adm.lviv.ua/"
+        ><image
+          src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcQlCg2lJCuf9QiIzDT8ESUASFcWWuu1uT5Xboq1DhUUGzOklMSF9s0esO7HSvyDSFlYkbnh_hrAMczJnSuarWjjE6I9dxdVlWOgHmbQSw"
+          width="1000px"
+          height="600px"
+          alt="Львів"
+      /></a>
+    </p>
+  </body>
 </html>
