--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="lab-1, KPI, front-end, FICE" />
     <title>Галай А. В. ІМ-21</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h2>Галай Андрій Вікторович</h2>
-    <p>Дата та місце народження: 8 серпня 2005 року, м. Київ</p>
-    <p>
+    <p id="birth-details">
+      Дата та місце народження: 8 серпня 2005 року, м. Київ
+    </p>
+    <p class="education">
       Освіта: Ліцей "Успіх", м. Київ; Київський політехнічний інститут ім. Ігоря
       Сікорського
     </p>
 
-    <p>Хоббі:</p>
+    <p>Хобі:</p>
     <ul>
       <li>Баскетбол</li>
       <li>Програмування</li>
@@ -38,14 +41,21 @@
       архітектурних композицій. Це місто, яке "охороняють" кам'яні благородні
       леви та яке змусить Вас повірити в мрію. Загадковості Львова не має меж.
     </p>
-    <p>
+    <div id="imgs-container">
       <a href="https://city-adm.lviv.ua/"
         ><image
           src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcQlCg2lJCuf9QiIzDT8ESUASFcWWuu1uT5Xboq1DhUUGzOklMSF9s0esO7HSvyDSFlYkbnh_hrAMczJnSuarWjjE6I9dxdVlWOgHmbQSw"
-          width="1000px"
-          height="600px"
+          width="400"
+          height="200"
           alt="Львів"
       /></a>
-    </p>
+    </div>
+    <div class="btns-container">
+      <button id="add-btn">Додати</button>
+      <button type="button" id="increase-btn">Збільшити</button>
+      <button id="decrease-btn">Зменшити</button>
+      <button id="delete-btn">Видалити</button>
+    </div>
+    <script src="script.js" defer />
   </body>
 </html>
