--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
       <button id="decrease-btn">Зменшити</button>
       <button id="delete-btn">Видалити</button>
     </div>
-    <script src="script.js" defer />
+    <script src="script.js" defer></script>
   </body>
 </html>
